2007-08-08  Maxim Grigoriev  <maxim2405@gmail.com>

	* xtensa-tdep.h (XTENSA_MAX_COPROCESSOR): New.
	(xtensa_register_group_t): Add entries for coprocessors.
	* xtensa-tdep.c (xtensa_init_reggroups): New register groups.
	(xtensa_add_reggroups): Likewise.
	(xtensa_register_reggroup_p): Likewise.
	(xtensa_coprocessor_register_group): New function.
	(xtensa_cp): New.

2007-08-08  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* serial.c (serial_open): Fix the OPEN parameter macro expansion.

2007-08-08  Michael Snyder  <msnyder@access-company.com>

	* target.c (target_read_string): Guard against null.

	* varobj.c (value_of_root): Move alloc after return to avoid leak.

	* tui/tui-layout.c (tui_set_layout): Dead code, dead variable.

	* top.c (command_line_input): Memory leak.

	* solib-svr4.c (open_symbol_file_object): Memory leak.
	(svr4_current_sos): Ditto.
	(enable_break): Ditto.

	* cp-valprint.c (cp_print_hpacc_virtual_table_entries): Memory leak.

	* dwarf2read.c (add_partial_symbol): Memory leak.

2007-08-06  Michael Snyder  <msnyder@access-company.com>

	* ada-lang.c (desc_bounds): Comparison of function address to NULL.

2007-08-05  Jim Blandy  <jimb@codesourcery.com>

	* macroexp.c (init_buffer): Remove testing code that overrides the
	caller's length guess.
	(gather_arguments): Use a larger initial size, now that the vector
	growth code has been exercised.

2007-08-05  Pedro Alves  <pedro_alves@portugalmail.pt>

	* solib-target.c (solib_target_relocate_section_addresses): Add
	orig_delta to addr_high.

2007-08-04  Michael Snyder  <msnyder@access-company.com>

	* remote-fileio.c (remote_fileio_func_write): Memory leak.

	* breakpoint.c (print_one_breakpoint): Off by one error.

	* tracepoint.c (add_register): Off by one error.
	(stringify_collection_list): Free malloc buffer.

2007-08-03  Michael Snyder  <msnyder@access-company.com>

	* mi-cmd-var.c (mi_cmd_var_delete): Remove unused variable,
	stop memory leak, straighten out cleanups.
